<?xml version="1.0" encoding="utf-8"?>

<!-- Author: Alina Vinogradova (xvinog00) -->

<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home"
        android:title="@string/title_home"/>

    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/ic_search"
        android:title="@string/title_search"
        app:showAsAction="collapseActionView|ifRoom"
        app:actionViewClass="androidx.appcompat.widget.SearchView"/>

    <item
        android:id="@+id/navigation_tasks"
        android:icon="@drawable/ic_tasks"
        android:title="@string/title_tasks"/>

    <item
        android:id="@+id/navigation_messages"
        android:icon="@drawable/ic_messages"
        android:title="@string/title_messages"/>

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/title_profile"/>

</menu>