<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.itu.lsm.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.itu.lsm.ui.search.SearchFragment"
        android:label="@string/title_search"
        tools:layout="@layout/fragment_search" />

    <fragment
        android:id="@+id/navigation_tasks"
        android:name="com.itu.lsm.ui.tasks.TasksFragment"
        android:label="@string/title_tasks"
        tools:layout="@layout/fragment_tasks" />

    <fragment
        android:id="@+id/navigation_messages"
        android:name="com.itu.lsm.ui.messages.MessagesFragment"
        android:label="@string/title_messages"
        tools:layout="@layout/fragment_messages" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.itu.lsm.ui.profile.ProfileFragment"
        android:label="Profile"
        tools:layout="@layout/fragment_profile">
        <action
            android:id="@+id/action_account_to_reservations_history"
            app:destination="@id/fragment_reservations_history" />
    </fragment>

    <fragment
        android:id="@+id/fragment_reservations_history"
        android:name="com.itu.lsm.ui.profile.ReservationsHistoryFragment"
        android:label="Reservations History"
        android:layout="@layout/fragment_reservations_history">
    </fragment>

</navigation>